<resources>
    <string name="app_name">Cheatz</string>
    <string name="start">Start</string>
    <string name="about">info</string>
    <string name="profile">Profile</string>
    <string name="info">info</string>
    <string name="education_made_easy_enabling">Cheatz Enabling</string>
    <string name="student_access_of_various">Student Access Of Various</string>
    <string name="resources_to_allocate_ease">Resources To Allocate Ease</string>
    <string name="amp_reduce_educational_stress"><![CDATA[& Reduce Educational Stress]]></string>
    <string name="to_leverage_better_scores">To Leverage Better Scores</string>
    <string name="during_exams_lab_internals">During Exams, Lab, Internals.</string>
    <string name="of_access_for_student_s">Of Access For Student</string>
    <string name="home">Home</string>
    <string name="download">Download</string>
    <string name="subjects">Subjects</string>
    <string name="ema">EMƎ</string>
    <string name="syllabus">Syllabus</string>
    <string name="select_your_semester">Select Your Semester</string>
    <string name="viva_questions">Viva Questions</string>
    <string name="question_bank">Question bank</string>
    <string name="important_questions">Important Questions</string>
    <string name="text_book">Text book</string>
    <string name="question_paper">question paper</string>
    <string name="model_paper">Model paper</string>
    <string name="study_material">Study Material</string>
    <string name="let_me_help_you">Let me help you</string>
    <string name="career_path">Career Path</string>
    <string name="recycle_your_old_books">Recycle Your Old books, Study Material, Notes , Question paper , Model paper ,News Papers</string>
    <string name="recycle">Recycle</string>
    <string name="we_will_reach_you_during_weekend_to_collect_the_items_thank_you">We Will Reach You During Weekend To Collect the items, Thank You..</string>
    <string name="making_education_easy">Making Education Easy</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="buy_recycled_textbooks">Buy Recycled Books</string>
    <string name="are_you_in_need_of_a_book_to_read_why_not_purchase_a_recycled_book_there_are_many_methods_to_recycle_books_and_one_is_by_selling_them_these_books_can_be_found_online_or_at_your_local_thrift_store">Are You In Need Of A Book To Read? Why Not Purchase A Recycled Book! There Are Many Methods To Recycle Books, And One Is By Selling Them. These Books Can Be Found Here .</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="online_payment">Online Payment</string>
    <string name="your_orders">Your Orders</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="one_step_away">One Step Away</string>
    <string name="_50">50 +</string>
    <string name="important_synopsis">Important Synopsis</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order_id">Order ID</string>
    <string name="contact">Contact</string>
    <string name="your_name">Your Name</string>
    <string name="address">Address</string>
    <string name="price_0">Price ₹ 0</string>
    <string name="lab_manual">Lab Manual</string>
    <string name="lab_record">Lab Record</string>
</resources>