<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".infoActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:scaleType="fitEnd"
        android:backgroundTint="@android:color/transparent"
        app:lottie_loop="true"
        android:background="@android:color/transparent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="84669-background-animation.json"
        android:layout_height="match_parent">
    </com.airbnb.lottie.LottieAnimationView>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:scaleType="fitStart"
        app:lottie_fileName="84668-background-animation.json"
        android:layout_height="match_parent">
    </com.airbnb.lottie.LottieAnimationView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/info"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/education_made_easy_enabling"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_access_of_various"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resources_to_allocate_ease"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of_access_for_student_s"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/during_exams_lab_internals"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_leverage_better_scores"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amp_reduce_educational_stress"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#292e37"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/transparent"
        android:tint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/planet" />


</androidx.constraintlayout.widget.ConstraintLayout>