<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context=".RecycleActivity">

    <ImageView
        android:layout_width="match_parent"
        android:background="#000"
        app:srcCompat="@drawable/backgroud2"
        android:scaleType="centerCrop"
        android:layout_height="match_parent">
    </ImageView>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_21sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recycle">
    </ImageView>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/recycle_your_old_books"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15">
    </TextView>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/your_name"
        android:layout_marginTop="@dimen/_32sdp"
        android:inputType="textPersonName"
        android:textColorHint="#FFF"
        android:textColor="#FFF"
        android:maxLines="1"
        android:ellipsize="end"
        android:drawableEnd="@drawable/ic_baseline_create_24"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />


    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableEnd="@drawable/ic_baseline_local_phone_24"
        android:ellipsize="end"
        android:ems="10"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/contact"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        android:ellipsize="end"
        android:ems="10"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:text="@string/we_will_reach_you_during_weekend_to_collect_the_items_thank_you"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_56sdp"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/recyclebottonbg"
        android:text="@string/recycle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:lottie_autoPlay="true"
        android:background="@android:color/transparent"
        app:lottie_fileName="23997-ecoleta.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>