<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context=".ImportantActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imporatantrecycleradapter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.recyclerview.widget.RecyclerView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@drawable/importantlayoutbg"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:maxLines="1"
            android:text="@string/important_synopsis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_height="wrap_content"
        android:scrollbarSize="0.00001dp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imporatantrecycleradapter">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/questionbank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/text_book"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/modelpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/model_paper"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/questionpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/question_paper"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/textbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_21sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/study_material"
                android:textAlignment="center"
                android:textColor="#FFF">

            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>