<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionbank">

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/idPDFView"
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </com.github.barteksc.pdfviewer.PDFView>
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="0.00001dp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/questionbank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/text_book"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/modelpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/model_paper"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/questionpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/question_paper"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/textbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/scrollbg"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/study_material"
                android:textAlignment="center"
                android:textColor="#FFF">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </HorizontalScrollView>


    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="@+id/idPDFView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idPDFView" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:visibility="gone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />

</androidx.constraintlayout.widget.ConstraintLayout>